--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@ngx-share/core": "^7.1.4",
     "angular-bootstrap": "^0.12.2",
     "bootstrap": "^4.6.0",
+    "jwthelper": "^0.0.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
