--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@ngx-share/core": "^7.1.4",
+    "ag-grid-angular": "^27.1.1",
+    "ag-grid-community": "^27.1.0",
+    "ag-grid-enterprise": "^27.1.0",
     "angular-bootstrap": "^0.12.2",
     "bootstrap": "^4.6.0",
+    "jwt-decode": "^3.1.2",
     "jwthelper": "^0.0.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
